public-demo/overlays/demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/client-max-body-size: 100M
    nginx.org/proxy-buffers: "8 32k"
    nginx.org/proxy-buffer-size: "64k"
    nginx.org/location-snippets: |
     rewrite /admin https://admin-demo.virtocommerce.com/ permanent;
    nginx.org/server-snippets: |
      error_page 500 501 502 503 504 = @sorry1;
      location @sorry1 {
        proxy_pass http://public-error-page.demo.svc.cluster.local:80; 
      }  
spec:
  tls:
    - hosts:
      - demo.virtocommerce.com
      - admin-demo.virtocommerce.com
      secretName: vc-wildcart
  rules:
  - host: demo.virtocommerce.com
    http:
      paths:
      - backend:
          serviceName: storefront
          servicePort: 80
        path: /
  - host: admin-demo.virtocommerce.com
    http:
      paths:
      - backend:
          serviceName: platform
          servicePort: 80
        path: /
